--- a/src/components/Leaflet.astro
+++ b/src/components/Leaflet.astro
@@ -12,7 +12,7 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
 
-<script src="./leaflet.ts">
+<script src="@components/leaflet.ts">
 </script>
 
 <style>
