--- a/src/components/Leaflet.astro
+++ b/src/components/Leaflet.astro
@@ -1,3 +1,7 @@
+---
+
+---
+
 <div id="leaflet"></div>
 
 <link
@@ -12,7 +16,9 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
 
-<script src="@components/leaflet.ts"> 
+<script>
+    import { createMap } from "@components/map";
+    createMap();
 </script>
 
 <style>
